<resources>
    <string name="app_name">Age Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="today_date_title">Today\'s Date</string>
    <string name="birth_date_title">Date of Birth</string>
    <string name="age">Age</string>
    <string name="next_birthday">Next BirthDay</string>
    <string name="day">dd</string>
    <string name="month">m</string>
    <string name="year">yyyy</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="years_value">"00"</string>
    <string name="months_value">"00"</string>
    <string name="days_value">"00"</string>
    <string name="extra">Extra</string>
    <string name="upcoming_birthdays">Upcoming BirthDays</string>

    <string name="total_years">Total Years</string>
    <string name="total_months">Total Months</string>
    <string name="total_weeks">Total Weeks</string>
    <string name="total_days">Total Days</string>
    <string name="total_hours">Total Hours</string>
    <string name="total_minutes">Total Minutes</string>
    <string name="total_seconds">Total Seconds</string>

</resources>
